--- a/package.json
+++ b/package.json
@@ -11,13 +11,20 @@
     },
     "devDependencies": {
         "@babel/preset-react": "^7.18.6",
+        "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0-rc.0",
         "axios": "^0.21",
+        "browser-sync": "^2.27.12",
+        "browser-sync-webpack-plugin": "^2.3.0",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "react-refresh": "^0.14.0"
     },
     "dependencies": {
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "react-redux": "^8.0.2",
+        "react-router-dom": "^6.3.0",
+        "redux": "4.2.0"
     }
 }
