--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "devDependencies": {
         "@babel/preset-react": "^7.18.6",
         "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0-rc.0",
-        "axios": "^0.21",
         "browser-sync": "^2.27.12",
         "browser-sync-webpack-plugin": "^2.3.0",
         "laravel-mix": "^6.0.6",
@@ -21,10 +20,18 @@
         "react-refresh": "^0.14.0"
     },
     "dependencies": {
+        "@mui/icons-material": "^5.11.11",
+        "@mui/material": "^5.11.11",
+        "@reduxjs/toolkit": "^1.9.3",
+        "axios": "^1.3.4",
+        "formik": "^2.2.9",
+        "moment": "^2.29.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-redux": "^8.0.2",
-        "react-router-dom": "^6.3.0",
-        "redux": "4.2.0"
+        "react-loader-spinner": "^5.3.4",
+        "react-router-dom": "^6.8.2",
+        "react-toastify": "^9.1.1",
+        "redux-saga": "^1.2.2",
+        "yup": "^1.0.2"
     }
 }
