--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "react-refresh": "^0.14.0"
     },
     "dependencies": {
+        "@emotion/react": "^11.10.6",
+        "@emotion/styled": "^11.10.6",
         "@mui/icons-material": "^5.11.11",
         "@mui/material": "^5.11.11",
         "@reduxjs/toolkit": "^1.9.3",
@@ -32,6 +34,7 @@
         "react-router-dom": "^6.8.2",
         "react-toastify": "^9.1.1",
         "redux-saga": "^1.2.2",
+        "sweetalert2": "^11.7.3",
         "yup": "^1.0.2"
     }
 }
